[gd_scene load_steps=4 format=3 uid="uid://cd3ou25t1u4ei"]

[ext_resource type="Script" uid="uid://djw0xbtnymavm" path="res://COMPONENTS/DragAndDrop/Draggable/draggable.gd" id="1_8v371"]
[ext_resource type="Shape2D" uid="uid://bqsxtwojvkxlw" path="res://COMPONENTS/DragAndDrop/Resources/dragging_collision_shape.tres" id="2_xq3ct"]
[ext_resource type="Texture2D" uid="uid://cvaxghcsay80s" path="res://icon.svg" id="4_l2ofq"]

[node name="DraggableTile" type="Node2D"]
script = ExtResource("1_8v371")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.30318865, 0.041402977, 0.17309885, 1)
texture = ExtResource("4_l2ofq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = ExtResource("2_xq3ct")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
